[package]
name = "oxideav-wbmp-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

# WBMP Type 0 is a trivially-simple 1-bit format: a Multi-Byte-Integer
# Type field, a 1-byte FixedHeader, two more MBIs (width, height) and a
# bit-packed pixel matrix `ceil(width / 8) * height` bytes long. The
# decoder is the only thing worth fuzzing — there is no standard system
# library worth pulling in as a cross-decode oracle and the clean-room
# wall bars any external WBMP source anyway, so these targets are
# **oxideav-only**:
#
#  * `decode`     — feed arbitrary bytes to `parse_wbmp` and assert it
#                   always returns a `Result` rather than panicking /
#                   aborting / OOMing. The classic overflow spots are
#                   the multi-byte width/height parse and the
#                   `stride * height` pixel-buffer allocation; both are
#                   guarded in the decoder and this target keeps them
#                   honest.
#  * `roundtrip`  — synthesise a valid Type-0 file from fuzz-controlled
#                   dimensions + packed bits, decode it, and assert the
#                   dimensions and plane bytes survive the round trip.
#  * `threshold`  — synthesise an 8-bit grayscale plane from fuzz-
#                   controlled dimensions + a fuzz-controlled threshold,
#                   run it through `encode_wbmp_from_threshold`, decode
#                   the result, and assert the packed bits match a
#                   bit-by-bit reference and the per-row padding bits
#                   are zero. Covers the `encode_wbmp_from_threshold`
#                   hot loop — the only public entry point with non-
#                   trivial per-pixel logic the other two targets miss.
#  * `dither`     — synthesise an 8-bit grayscale plane from fuzz-
#                   controlled dimensions, run it through
#                   `encode_wbmp_from_dither` (Floyd–Steinberg error
#                   diffusion), decode, and assert dimensions, stride,
#                   per-row padding-bits-zero, plus the saturated-input
#                   agreement against `encode_wbmp_from_threshold` at
#                   threshold 128. Covers the only stateful per-pixel
#                   encoder path (i16 accumulator + per-row cur/next
#                   swap) — failure modes the other three targets miss.
#  * `polarity`   — synthesise a canonical (padding-bit-masked) MonoWhite
#                   plane, encode it, decode it twice — once verbatim
#                   (`parse_wbmp`) and once as inverted polarity
#                   (`parse_wbmp_as(MonoBlack)`) — and assert the two
#                   planes agree under the documented in-place bit-
#                   inversion + per-row trailing-padding-bit re-zero
#                   transform. Covers the in-place padding-mask logic
#                   in `parse_wbmp_as` — the only entry point the other
#                   four targets don't reach.
#  * `header_ext` — feed arbitrary bytes to `parse_header_ext`, the
#                   general-form header parser that decodes the
#                   FixHeaderField bitfields and the variable-length
#                   ExtFields region (§4.4.1-§4.4.3) before the dimension
#                   MBIs. Asserts the call always returns, dimensions are
#                   non-zero, `data_offset` stays within the input, the
#                   ExtFields presence matches the FixHeaderField bit-7
#                   flag, and any decoded ExtFields survives a
#                   write/re-parse round trip. Covers the extension-header
#                   state machine — the most attacker-driven control flow
#                   in the crate — that the other five targets never
#                   reach (they all use the opaque-FixHeaderField
#                   `parse_header` / encoder paths).
#
# The crate is pulled in with `default-features = false` so the fuzz
# build exercises the framework-free standalone `parse_wbmp` /
# `encode_wbmp` / `encode_wbmp_from_threshold` / `encode_wbmp_from_dither`
# path and never links `oxideav-core`.

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.oxideav-wbmp]
path = ".."
default-features = false

# Prevent this from interfering with the umbrella workspace.
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "decode"
path = "fuzz_targets/decode.rs"
test = false
doc = false

[[bin]]
name = "roundtrip"
path = "fuzz_targets/roundtrip.rs"
test = false
doc = false

[[bin]]
name = "threshold"
path = "fuzz_targets/threshold.rs"
test = false
doc = false

[[bin]]
name = "dither"
path = "fuzz_targets/dither.rs"
test = false
doc = false

[[bin]]
name = "polarity"
path = "fuzz_targets/polarity.rs"
test = false
doc = false

[[bin]]
name = "header_ext"
path = "fuzz_targets/header_ext.rs"
test = false
doc = false

[[bin]]
name = "decode_ext"
path = "fuzz_targets/decode_ext.rs"
test = false
doc = false
