[package]
name = "oxideav-wbmp-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

# WBMP Type 0 is a trivially-simple 1-bit format: a Multi-Byte-Integer
# Type field, a 1-byte FixedHeader, two more MBIs (width, height) and a
# bit-packed pixel matrix `ceil(width / 8) * height` bytes long. The
# decoder is the only thing worth fuzzing — there is no standard system
# library worth pulling in as a cross-decode oracle and the clean-room
# wall bars any external WBMP source anyway, so these targets are
# **oxideav-only**:
#
#  * `decode`     — feed arbitrary bytes to `parse_wbmp` and assert it
#                   always returns a `Result` rather than panicking /
#                   aborting / OOMing. The classic overflow spots are
#                   the multi-byte width/height parse and the
#                   `stride * height` pixel-buffer allocation; both are
#                   guarded in the decoder and this target keeps them
#                   honest.
#  * `roundtrip`  — synthesise a valid Type-0 file from fuzz-controlled
#                   dimensions + packed bits, decode it, and assert the
#                   dimensions and plane bytes survive the round trip.
#  * `threshold`  — synthesise an 8-bit grayscale plane from fuzz-
#                   controlled dimensions + a fuzz-controlled threshold,
#                   run it through `encode_wbmp_from_threshold`, decode
#                   the result, and assert the packed bits match a
#                   bit-by-bit reference and the per-row padding bits
#                   are zero. Covers the `encode_wbmp_from_threshold`
#                   hot loop — the only public entry point with non-
#                   trivial per-pixel logic the other two targets miss.
#  * `dither`     — synthesise an 8-bit grayscale plane from fuzz-
#                   controlled dimensions, run it through
#                   `encode_wbmp_from_dither` (Floyd–Steinberg error
#                   diffusion), decode, and assert dimensions, stride,
#                   per-row padding-bits-zero, plus the saturated-input
#                   agreement against `encode_wbmp_from_threshold` at
#                   threshold 128. Covers the only stateful per-pixel
#                   encoder path (i16 accumulator + per-row cur/next
#                   swap) — failure modes the other three targets miss.
#  * `polarity`   — synthesise a canonical (padding-bit-masked) MonoWhite
#                   plane, encode it, decode it twice — once verbatim
#                   (`parse_wbmp`) and once as inverted polarity
#                   (`parse_wbmp_as(MonoBlack)`) — and assert the two
#                   planes agree under the documented in-place bit-
#                   inversion + per-row trailing-padding-bit re-zero
#                   transform. Covers the in-place padding-mask logic
#                   in `parse_wbmp_as` — the only entry point the other
#                   four targets don't reach.
#  * `header_ext` — feed arbitrary bytes to `parse_header_ext`, the
#                   general-form header parser that decodes the
#                   FixHeaderField bitfields and the variable-length
#                   ExtFields region (§4.4.1-§4.4.3) before the dimension
#                   MBIs. Asserts the call always returns, dimensions are
#                   non-zero, `data_offset` stays within the input, the
#                   ExtFields presence matches the FixHeaderField bit-7
#                   flag, and any decoded ExtFields survives a
#                   write/re-parse round trip. Covers the extension-header
#                   state machine — the most attacker-driven control flow
#                   in the crate — that the other five targets never
#                   reach (they all use the opaque-FixHeaderField
#                   `parse_header` / encoder paths).
#  * `header_ext_strict`
#                 — feed arbitrary bytes to `parse_header_ext_strict`, the
#                   fully-conformant general-form header parser. On top of
#                   the offset arithmetic `header_ext` covers, it enforces
#                   the §4.3.1 shortest-MBI rule and the §4.4.3 Type-11
#                   character classes (identifier = US-ASCII CHAR, value =
#                   ALPHA / DIGIT). Asserts strict ⊆ lax (strict accepts a
#                   subset of lax and decodes identically), a strict-
#                   accepted Type-11 region's parameters all pass
#                   `Parameter::validate` + have UTF-8 accessors, and the
#                   region survives a `write_ext_fields_strict` →
#                   `parse_ext_fields_strict` round trip. The only target
#                   reaching the strict character-class state machine.
#  * `frames`     — exercise the animated-sub-image entry points
#                   `parse_wbmp_frames` / `encode_wbmp_frames`
#                   (WAP-237 §4.2 / §4.5.1). Decode half: feed arbitrary
#                   bytes to `parse_wbmp_frames` and assert it returns,
#                   never panics, and on success yields a self-consistent
#                   `WbmpAnimation` (1..=16 frames, each exactly
#                   `stride * height` bytes, helper agreement, `main_image`
#                   == frame 0 == the single-frame `parse_wbmp` plane).
#                   Encode half: synthesise 1..=16 distinct same-dimension
#                   planes, round-trip them through
#                   `encode_wbmp_frames` → `parse_wbmp_frames`, and assert
#                   every plane survives byte-for-byte in stream order
#                   (plus single-frame `encode_wbmp` equivalence). The only
#                   target that reaches the multi-frame back-to-back layout.
#  * `mbi`        — drive the Multi-Byte Integer codec directly
#                   (`write_mbi_u32` / `read_mbi_u32` / `read_mbi_u32_strict`
#                   / `mbi_u32_len`). Writer half: round-trip every `u32`
#                   and assert the §4.3.1 invariants (no leading 0x80,
#                   continuation-bit discipline, 1..=5 octets, len estimator
#                   agreement, exact re-decode). Reader half: arbitrary
#                   bytes through both readers never panic, strict ⊆ lax,
#                   and any lax success consumes in-bounds octets no fewer
#                   than the value's minimal form. The only target that
#                   drives the writer across the full value space.
#  * `strict_decode`
#                 — drive `parse_wbmp_strict` / `parse_wbmp_strict_with_limits`,
#                   the fully-conformant whole-image decode path (the
#                   `FixHeaderField` MUST be 0x00, dimension MBIs read with
#                   the §4.3.1 shortest-encoding check). Asserts the call
#                   returns and that strict ⊆ lax: a strict-accepted stream
#                   decodes identically through `parse_wbmp`. The only
#                   target reaching the strict whole-image path (`decode`
#                   drives lax `parse_wbmp`; `header_ext_strict` drives the
#                   presence-bit-tolerant `parse_header_ext_strict`).
#  * `encode_ext` — round-trip the general-form extension-header *writer*
#                   `encode_wbmp_ext` (§4.4.1) through `parse_wbmp_ext` for
#                   every `ExtFields` variant (`None` / `Bitfield00` /
#                   `Reserved01` / `Reserved10` / `ParameterPairs11`), lax
#                   and strict. Asserts the image + ext fields survive
#                   byte-for-byte and that a `None` ext field yields an
#                   `encode_wbmp`-identical stream. The only target closing
#                   the encode → decode loop over the full file writer
#                   (`header_ext` round-trips only the region-level
#                   `write_ext_fields`; `decode_ext` only reads).
#
# The crate is pulled in with `default-features = false` so the fuzz
# build exercises the framework-free standalone `parse_wbmp` /
# `encode_wbmp` / `encode_wbmp_from_threshold` / `encode_wbmp_from_dither`
# path and never links `oxideav-core`.

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.oxideav-wbmp]
path = ".."
default-features = false

# Prevent this from interfering with the umbrella workspace.
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "decode"
path = "fuzz_targets/decode.rs"
test = false
doc = false

[[bin]]
name = "roundtrip"
path = "fuzz_targets/roundtrip.rs"
test = false
doc = false

[[bin]]
name = "threshold"
path = "fuzz_targets/threshold.rs"
test = false
doc = false

[[bin]]
name = "dither"
path = "fuzz_targets/dither.rs"
test = false
doc = false

[[bin]]
name = "polarity"
path = "fuzz_targets/polarity.rs"
test = false
doc = false

[[bin]]
name = "header_ext"
path = "fuzz_targets/header_ext.rs"
test = false
doc = false

[[bin]]
name = "decode_ext"
path = "fuzz_targets/decode_ext.rs"
test = false
doc = false

[[bin]]
name = "header_ext_strict"
path = "fuzz_targets/header_ext_strict.rs"
test = false
doc = false

[[bin]]
name = "frames"
path = "fuzz_targets/frames.rs"
test = false
doc = false

[[bin]]
name = "mbi"
path = "fuzz_targets/mbi.rs"
test = false
doc = false

[[bin]]
name = "strict_decode"
path = "fuzz_targets/strict_decode.rs"
test = false
doc = false

[[bin]]
name = "encode_ext"
path = "fuzz_targets/encode_ext.rs"
test = false
doc = false
